# COSC6353Assignments

./: .gitignore  README.md  package.json
api/: api.py
backend/: .coverage  app.py  docker-compose.yml  pyproject.toml
backend/backend.egg-info/: PKG-INFO  requires.txt
backend/modules/: authentication.py  database_helper.py  profile_management.py  quotes.py  user.py
backend/tests/: test_app.py  test_authentication.py  test_db_helper.py  test_profile_management.py  test_quotes.py  test_user.py
frontend/: package-lock.json  package.json
frontend/containers/: Home.css  Login.css  NotFound.js  Register.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  FuelHistory.js  FuelQuoteForm.js  Homepage.css  Homepage.js  Routes.js  agent.js  index.css
frontend/src/components/: App.js  FuelQuoteForm.js  FuelQuoteHistoryForm.js  LoginForm.js  UserProfileForm.js
frontend/src/containers/: FuelHistory.css  FuelHistory.js  FuelQuoteForm.css  FuelQuoteForm.js  Home.css  Home.js  Login.js  Logout.css  Logout.js  NotFound.css  Profile.css  Profile.js  Register.css  Register.js
public/: index.html
src/components/: App.js  RegisterForm.js
tests/: test_profile_management.py  test_quotes.py  test_user.py
