[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend for Cosc6353 assignments."
authors = ["Erich McMillan <erich.mcmillan@hp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
jsonify = "^0.5"
pymongo = "^3.10.1"
pytest = "^5.4.3"
coverage = "^5.1"
ptvsd = "^4.3.2"
flask-cors = "^3.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
